force-app/main/default/objects/User_Address__c/User_Address__c.object-meta.xml
<CustomObject>
    <description>It acts as a junction object between Person Account &amp; Address. And also, its hold Person Account&apos;s housing details.</description>
    <label>User Address</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Person Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Address</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>