force-app/main/default/objects/User_Address__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>User Address</relationshipLabel>
    <relationshipName>User_Address</relationshipName>
    <type>Lookup</type>
</CustomField>