force-app/main/default/objects/User_Address__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <description>It holds the confirmation number of the account. And it should be greater than lead id value.</description>
    <externalId>true</externalId>
    <label>Confirmation Number</label>
    <type>AutoNumber</type>
</CustomField>