force-app/main/default/objects/User_Address__c/fields/Consent_Created_by__c.field-meta.xml
<CustomField>
    <fullName>Consent_Created_by__c</fullName>
    <formula>UserAccount__r.User_Who_Captured_Verbal_Consent__r.User_Full_Name__c</formula>
    <label>Consent Created by</label>
    <type>Text</type>
</CustomField>