force-app/main/default/objects/User_Address__c/fields/Consent_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Consent_Promotion__c</fullName>
    <label>Consent Promotion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>