force-app/main/default/objects/User_Address__c/fields/Consent_Report__c.field-meta.xml
<CustomField>
    <fullName>Consent_Report__c</fullName>
    <formula>IF(  Verbal_Consent__c = &quot;Yes&quot; , &quot;Yes&quot;,   &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consent Report</label>
    <type>Text</type>
</CustomField>