force-app/main/default/objects/User_Address__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon</label>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>User Address</relationshipLabel>
    <relationshipName>User_Address</relationshipName>
    <type>Lookup</type>
</CustomField>