force-app/main/default/objects/User_Address__c/fields/CPL_Billing_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CPL_Billing_Opportunity__c</fullName>
    <description>Used to store the billing opportunity variable during a live call so an agent know who to transfer to.</description>
    <label>CPL Billing Opportunity</label>
    <length>150</length>
    <type>Text</type>
</CustomField>