force-app/main/default/objects/User_Address__c/fields/CreatedfromBP__c.field-meta.xml
<CustomField>
    <fullName>CreatedfromBP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate that field is created from BP or not.</description>
    <label>CreatedfromBP</label>
    <type>Checkbox</type>
</CustomField>