force-app/main/default/objects/User_Address__c/fields/creationDate__c.field-meta.xml
<CustomField>
    <fullName>creationDate__c</fullName>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>