force-app/main/default/objects/User_Address__c/fields/Data_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Data_Provider_ID__c</fullName>
    <label>Data Provider ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>