force-app/main/default/objects/User_Address__c/fields/deletionDate__c.field-meta.xml
<CustomField>
    <fullName>deletionDate__c</fullName>
    <label>Deletion Date</label>
    <type>Date</type>
</CustomField>