force-app/main/default/objects/User_Address__c/fields/Dialer_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Campaign_Status__c</fullName>
    <label>Dialer Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Exhausted</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>