force-app/main/default/objects/User_Address__c/fields/DNC__c.field-meta.xml
<CustomField>
    <fullName>DNC__c</fullName>
    <formula>UserAccount__r.PersonContact.DoNotCall</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>