force-app/main/default/objects/User_Address__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Unique identifier for MYSQL data table.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>