force-app/main/default/objects/User_Address__c/fields/fAccountID18__c.field-meta.xml
<CustomField>
    <fullName>fAccountID18__c</fullName>
    <formula>CASESAFEID(UserAccount__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAccountID18</label>
    <type>Text</type>
</CustomField>