force-app/main/default/objects/User_Address__c/fields/fAccountID__c.field-meta.xml
<CustomField>
    <fullName>fAccountID__c</fullName>
    <formula>UserAccount__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAccountID</label>
    <type>Text</type>
</CustomField>