force-app/main/default/objects/User_Address__c/fields/fAccountPhone__c.field-meta.xml
<CustomField>
    <fullName>fAccountPhone__c</fullName>
    <formula>UserAccount__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAccountPhone</label>
    <type>Text</type>
</CustomField>