force-app/main/default/objects/User_Address__c/fields/fAddress__c.field-meta.xml
<CustomField>
    <fullName>fAddress__c</fullName>
    <formula>Address__r.Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAddress</label>
    <type>Text</type>
</CustomField>