force-app/main/default/objects/User_Address__c/fields/fAddress_Branch__c.field-meta.xml
<CustomField>
    <fullName>fAddress_Branch__c</fullName>
    <formula>Address__r.Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fAddress:Branch</label>
    <type>Text</type>
</CustomField>