force-app/main/default/objects/User_Address__c/fields/fCity__c.field-meta.xml
<CustomField>
    <fullName>fCity__c</fullName>
    <formula>Address__r.City__c</formula>
    <label>fCity</label>
    <type>Text</type>
</CustomField>