force-app/main/default/objects/User_Address__c/fields/fDays_After_Recording__c.field-meta.xml
<CustomField>
    <fullName>fDays_After_Recording__c</fullName>
    <formula>If( (Address__r.Branch__r.Name = &quot;Invalid Zip Code&quot; || Address__r.Branch__r.Name = &quot;ZZ-No_Delivery&quot;) , &quot;ZZZZZ-unmapped Data-ZZZZZ&quot;,
If(  (DATE(2015,10,03)  -  fRecording_Date__c) &lt;= 7, &quot;eSame Week&quot;,
   If(  (DATE(2015,10,03)  -  fRecording_Date__c)&lt;= 14, &quot;d7-14 days&quot;,
     If(  (DATE(2015,10,03)  -  fRecording_Date__c)&lt;= 30,&quot;c15-30 days&quot;,
       If(  (DATE(2015,10,03)  -  fRecording_Date__c)&lt;= 60,&quot;b30-60 days&quot;,
&quot;aGreater Than 60 days&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fDays After Recording</label>
    <type>Text</type>
</CustomField>