force-app/main/default/objects/User_Address__c/fields/fDays_to_Import_after_recording__c.field-meta.xml
<CustomField>
    <fullName>fDays_to_Import_after_recording__c</fullName>
    <formula>IF( ISBLANK(Recording_Date__c),NULL,
    IF(   DATEVALUE( CreatedDate) - Recording_Date__c &gt; 90, NULL , DATEVALUE( CreatedDate) - Recording_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fDays to Import after recording</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>