force-app/main/default/objects/User_Address__c/fields/fEmail__c.field-meta.xml
<CustomField>
    <fullName>fEmail__c</fullName>
    <formula>UserAccount__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fEmail</label>
    <type>Text</type>
</CustomField>