force-app/main/default/objects/User_Address__c/fields/fFirstName__c.field-meta.xml
<CustomField>
    <fullName>fFirstName__c</fullName>
    <formula>UserAccount__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fFirstName</label>
    <type>Text</type>
</CustomField>