force-app/main/default/objects/User_Address__c/fields/FileNumber__c.field-meta.xml
<CustomField>
    <fullName>FileNumber__c</fullName>
    <externalId>true</externalId>
    <label>FileNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>