force-app/main/default/objects/User_Address__c/fields/fLastName__c.field-meta.xml
<CustomField>
    <fullName>fLastName__c</fullName>
    <formula>UserAccount__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fLastName</label>
    <type>Text</type>
</CustomField>