force-app/main/default/objects/User_Address__c/fields/fLeadID__c.field-meta.xml
<CustomField>
    <fullName>fLeadID__c</fullName>
    <formula>text(UserAccount__r.Confirmation_NUM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fLeadID</label>
    <type>Text</type>
</CustomField>