force-app/main/default/objects/User_Address__c/fields/Formula_Scan_Code__c.field-meta.xml
<CustomField>
    <fullName>Formula_Scan_Code__c</fullName>
    <formula>SUBSTITUTE(LEFT(Scan_code__c,9), &quot; &quot;,&quot;&quot;)&amp; RIGHT(Scan_code__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Scan Code</label>
    <type>Text</type>
</CustomField>