force-app/main/default/objects/User_Address__c/fields/fPhone__c.field-meta.xml
<CustomField>
    <fullName>fPhone__c</fullName>
    <formula>BLANKVALUE(Phone__c ,  PersonMobilePhone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fPhone</label>
    <type>Text</type>
</CustomField>