force-app/main/default/objects/User_Address__c/fields/fPhone_was_added_to_wrong_account__c.field-meta.xml
<CustomField>
    <fullName>fPhone_was_added_to_wrong_account__c</fullName>
    <formula>UserAccount__r.Phone_was_added_to_wrong_account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fPhone # was added to wrong account</label>
    <type>Checkbox</type>
</CustomField>