force-app/main/default/objects/User_Address__c/fields/fPhoneFormat__c.field-meta.xml
<CustomField>
    <fullName>fPhoneFormat__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(fPhone__c, &quot;(&quot;, &quot;1&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fPhoneFormat</label>
    <type>Text</type>
</CustomField>