force-app/main/default/objects/User_Address__c/fields/fRegion_MD__c.field-meta.xml
<CustomField>
    <fullName>fRegion_MD__c</fullName>
    <formula>Address__r.Branch__r.Region_MD__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fRegion MD</label>
    <type>Text</type>
</CustomField>