force-app/main/default/objects/User_Address__c/fields/fRespond_Date__c.field-meta.xml
<CustomField>
    <fullName>fRespond_Date__c</fullName>
    <formula>UserAccount__r.Respond_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fRespond Date</label>
    <type>Date</type>
</CustomField>