force-app/main/default/objects/User_Address__c/fields/fState__c.field-meta.xml
<CustomField>
    <fullName>fState__c</fullName>
    <formula>TEXT (Address__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fState</label>
    <type>Text</type>
</CustomField>