force-app/main/default/objects/User_Address__c/fields/fZip__c.field-meta.xml
<CustomField>
    <fullName>fZip__c</fullName>
    <formula>Address__r.Full_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fZip</label>
    <type>Text</type>
</CustomField>