force-app/main/default/objects/User_Address__c/fields/fzipCode__c.field-meta.xml
<CustomField>
    <fullName>fzipCode__c</fullName>
    <formula>Address__r.Zip_Code__c</formula>
    <label>fzipCode</label>
    <type>Text</type>
</CustomField>