force-app/main/default/objects/User_Address__c/fields/Home_Type__c.field-meta.xml
<CustomField>
    <fullName>Home_Type__c</fullName>
    <formula>TEXT( Address__r.Home_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Type</label>
    <type>Text</type>
</CustomField>