force-app/main/default/objects/User_Address__c/fields/Hot_Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>Hot_Lead_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Lead Created</label>
    <type>Checkbox</type>
</CustomField>