force-app/main/default/objects/User_Address__c/fields/Household_respond_date__c.field-meta.xml
<CustomField>
    <fullName>Household_respond_date__c</fullName>
    <description>If two or more user resides in the same address the user who is not the primary owner who responds for the delivery then the house hold respond date will be populated</description>
    <label>Household respond date</label>
    <type>Date</type>
</CustomField>