force-app/main/default/objects/User_Address__c/fields/IBTM_Cost__c.field-meta.xml
<CustomField>
    <fullName>IBTM_Cost__c</fullName>
    <formula>IF (Responded__c , 7.5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBTM Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>