force-app/main/default/objects/User_Address__c/fields/Inbound_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Verification_Code__c</fullName>
    <label>Inbound Verification Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>