force-app/main/default/objects/User_Address__c/fields/Inbound_Verification_Code_Date__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Verification_Code_Date__c</fullName>
    <label>Inbound Verification Code Date</label>
    <type>DateTime</type>
</CustomField>