force-app/main/default/objects/User_Address__c/fields/InteractionStepId__c.field-meta.xml
<CustomField>
    <fullName>InteractionStepId__c</fullName>
    <label>Interaction Step ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>