force-app/main/default/objects/User_Address__c/fields/Inventory_Created__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates that hot lead invetory record created or not for this user address</description>
    <label>Inventory Created</label>
    <type>Checkbox</type>
</CustomField>