force-app/main/default/objects/User_Address__c/fields/IsDummyAddress__c.field-meta.xml
<CustomField>
    <fullName>IsDummyAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will holds the value of valid or invalid user address</description>
    <label>IsDummyAddress</label>
    <type>Checkbox</type>
</CustomField>