force-app/main/default/objects/User_Address__c/fields/IsOk__c.field-meta.xml
<CustomField>
    <fullName>IsOk__c</fullName>
    <formula>IF( Address__r.Street_Zip__c  =  Street_Zip__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOk</label>
    <type>Checkbox</type>
</CustomField>