force-app/main/default/objects/User_Address__c/fields/IsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPersonAccount__c</fullName>
    <formula>UserAccount__r.IsPersonAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsPersonAccount</label>
    <type>Checkbox</type>
</CustomField>