force-app/main/default/objects/User_Address__c/fields/knock_counter__c.field-meta.xml
<CustomField>
    <fullName>knock_counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>knock counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>