force-app/main/default/objects/User_Address__c/fields/Kunnect_Rep_Username__c.field-meta.xml
<CustomField>
    <fullName>Kunnect_Rep_Username__c</fullName>
    <label>Kunnect Rep Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>