force-app/main/default/objects/User_Address__c/fields/Kunnect_Sync__c.field-meta.xml
<CustomField>
    <fullName>Kunnect_Sync__c</fullName>
    <label>Kunnect Sync</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>contact_metro_inbound</fullName>
            </value>
            <value>
                <fullName>source_contact_01_water</fullName>
            </value>
            <value>
                <fullName>source_contact_01_security</fullName>
            </value>
            <value>
                <fullName>source_contact_windows_and_blinds</fullName>
            </value>
            <value>
                <fullName>source_contact_srp_solar</fullName>
            </value>
            <value>
                <fullName>source_contact_pest_control</fullName>
            </value>
            <value>
                <fullName>source_contact_hvac</fullName>
            </value>
            <value>
                <fullName>source_contact_solar</fullName>
            </value>
            <value>
                <fullName>KunnectToSF</fullName>
            </value>
            <value>
                <fullName>gravel_contact_security</fullName>
            </value>
            <value>
                <fullName>gravel_contact_water</fullName>
            </value>
            <value>
                <fullName>gravel_contact_solar</fullName>
            </value>
            <value>
                <fullName>gravel_contact_remodel</fullName>
            </value>
            <value>
                <fullName>gravel_contact_pest_control</fullName>
            </value>
            <value>
                <fullName>gravel_contact_hvac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>