force-app/main/default/objects/User_Address__c/fields/Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Market_Value__c</fullName>
    <label>Market Value</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>