force-app/main/default/objects/User_Address__c/fields/Missing_Box__c.field-meta.xml
<CustomField>
    <fullName>Missing_Box__c</fullName>
    <label>Missing Box</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Box with Activation</fullName>
            </value>
            <value>
                <fullName>No Welcome Gift Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>