force-app/main/default/objects/User_Address__c/fields/OB_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Members__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OB Campaign Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>