force-app/main/default/objects/User_Address__c/fields/Old_Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Confirmation_Number__c</fullName>
    <label>Old Confirmation Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>