force-app/main/default/objects/User_Address__c/fields/Ownership_Rights__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Rights__c</fullName>
    <label>Ownership Rights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>