force-app/main/default/objects/User_Address__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>