force-app/main/default/objects/User_Address__c/fields/PersonMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>PersonMobilePhone__c</fullName>
    <description>This field will store the person Mobile Phone number</description>
    <label>PersonMobilePhone</label>
    <type>Phone</type>
</CustomField>