force-app/main/default/objects/User_Address__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This field will store the person Phone number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>