force-app/main/default/objects/User_Address__c/fields/Phone_Rep__c.field-meta.xml
<CustomField>
    <fullName>Phone_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phone Rep</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>User Address (Phone Rep)</relationshipLabel>
    <relationshipName>User_Address_Phone_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>