force-app/main/default/objects/User_Address__c/fields/Price_Per_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Sqft__c</fullName>
    <description>To hold the price amount per sqft</description>
    <label>Price Per Sqft</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>