force-app/main/default/objects/User_Address__c/fields/PushOBCM_TrigVal__c.field-meta.xml
<CustomField>
    <fullName>PushOBCM_TrigVal__c</fullName>
    <formula>Today() - Respond_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PushOBCM_TrigVal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>