force-app/main/default/objects/User_Address__c/fields/r_com_offer_qualified__c.field-meta.xml
<CustomField>
    <fullName>r_com_offer_qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This person has qualified for the restaurant.com offer</description>
    <inlineHelpText>This person has qualified for the restaurant.com offer</inlineHelpText>
    <label>r.com offer qualified</label>
    <type>Checkbox</type>
</CustomField>