force-app/main/default/objects/User_Address__c/fields/r_com_offer_sent__c.field-meta.xml
<CustomField>
    <fullName>r_com_offer_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The consumer&apos;s email was sent to restaurant.com for offer fulfillment</description>
    <inlineHelpText>The consumer&apos;s email was sent to restaurant.com for offer fulfillment</inlineHelpText>
    <label>r.com offer sent</label>
    <type>Checkbox</type>
</CustomField>