force-app/main/default/objects/User_Address__c/fields/r_com_offer_sent_by_user__c.field-meta.xml
<CustomField>
    <fullName>r_com_offer_sent_by_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>r.com offer sent by user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Address3</relationshipName>
    <type>Lookup</type>
</CustomField>