force-app/main/default/objects/User_Address__c/fields/r_com_offer_sent_date__c.field-meta.xml
<CustomField>
    <fullName>r_com_offer_sent_date__c</fullName>
    <label>r.com offer sent date</label>
    <type>DateTime</type>
</CustomField>