force-app/main/default/objects/User_Address__c/fields/ResDate_NumOfDays__c.field-meta.xml
<CustomField>
    <fullName>ResDate_NumOfDays__c</fullName>
    <description>Required for call cadence so when this person is in a call campaign we know how old it is by number of days since response.</description>
    <formula>TODAY() - Respond_Date__c</formula>
    <label>ResDate NumOfDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>