force-app/main/default/objects/User_Address__c/fields/Respond_Date_Created_by__c.field-meta.xml
<CustomField>
    <fullName>Respond_Date_Created_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It will holds the value of user who updated the respond date</description>
    <label>Respond Date Created by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Address</relationshipName>
    <type>Lookup</type>
</CustomField>