force-app/main/default/objects/User_Address__c/fields/Responded__c.field-meta.xml
<CustomField>
    <fullName>Responded__c</fullName>
    <formula>if(or(
not(isblank( Respond_Date__c )),
not(isblank(  Household_respond_date__c  )),
not(isblank( PersonMobilePhone__c )),
not(isblank( Phone__c )),
not(isblank( UserAccount__r.PersonEmail ))),
True,
False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responded</label>
    <type>Checkbox</type>
</CustomField>