force-app/main/default/objects/User_Address__c/fields/Sales_Price_Rate_10__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_Rate_10__c</fullName>
    <formula>0.10 * Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Price Rate 10%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>