force-app/main/default/objects/User_Address__c/fields/sales_rabbit_leadId__c.field-meta.xml
<CustomField>
    <fullName>sales_rabbit_leadId__c</fullName>
    <label>salesrabbit lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>