force-app/main/default/objects/User_Address__c/fields/Scan_code__c.field-meta.xml
<CustomField>
    <fullName>Scan_code__c</fullName>
    <description>The scan code of the card</description>
    <inlineHelpText>Identifies Batch / Order / Card / Box</inlineHelpText>
    <label>Scan code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>