force-app/main/default/objects/User_Address__c/fields/Send_Activation_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Activation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Unchecked : Check this to send an activations E-mail and enter the Person into a drip campaign that sends them e-mails until the activate. 
If Checked : They have been entered into a Activations drip.</description>
    <label>Send Activation Email</label>
    <type>Checkbox</type>
</CustomField>