force-app/main/default/objects/User_Address__c/fields/StateAndCountyCombination__c.field-meta.xml
<CustomField>
    <fullName>StateAndCountyCombination__c</fullName>
    <formula>IF(TEXT(Address__r.State__c) != &apos;&apos;&amp;&amp; Address__r.County__c != &apos;&apos;, TRIM(LOWER(TEXT(Address__r.State__c) +&apos;:&apos;+Address__r.County__c)),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StateAndCountyCombination</label>
    <type>Text</type>
</CustomField>