force-app/main/default/objects/User_Address__c/fields/Street_Zip__c.field-meta.xml
<CustomField>
    <fullName>Street_Zip__c</fullName>
    <formula>UserAccount__r.Street__c +&quot; &quot;+  UserAccount__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street-Zip</label>
    <type>Text</type>
</CustomField>