force-app/main/default/objects/User_Address__c/fields/Update_Account_with_info__c.field-meta.xml
<CustomField>
    <fullName>Update_Account_with_info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Account with info</label>
    <type>Checkbox</type>
</CustomField>