force-app/main/default/objects/User_Address__c/fields/User_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Address_Type__c</fullName>
    <description>holds the type of address</description>
    <label>User Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Owner</fullName>
            </value>
            <value>
                <fullName>Secondary Owner</fullName>
            </value>
            <value>
                <fullName>Mailing Address</fullName>
            </value>
            <value>
                <fullName>Billing Address</fullName>
            </value>
            <value>
                <fullName>Renter</fullName>
            </value>
            <value>
                <fullName>Un-validated Homeowner</fullName>
            </value>
            <value>
                <fullName>Family of Renter</fullName>
            </value>
            <value>
                <fullName>Family of Un-validated Homeowner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>